--- a/src/assets/css/common/base.css
+++ b/src/assets/css/common/base.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*reset*/
-html { font-family: "Helvetica Neue", Helvetica, STHeiTi, Arial, sans-serif; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; font-size:10px; -ms-touch-action: none;-webkit-overflow-scrolling:touch;}
-body { margin: 0; font-size:1.4rem; line-height: 1; color: #212121; background-color:#f5f5f5; overflow: hidden;   }
+/* html { font-family: "Helvetica Neue", Helvetica, STHeiTi, Arial, sans-serif; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; font-size:14px; -ms-touch-action: none;-webkit-overflow-scrolling:touch;}
+body { margin: 0; font-size:14px; line-height: 1; color: #212121; background-color:#f5f5f5; overflow: hidden;   } */
 html, body { overflow: hidden;height: 100%;  }
 article, aside, details, figcaption, figure, footer, header, main, nav, section, summary { display: block; }
 audio, canvas, progress, video { display: inline-block; vertical-align: baseline; }
@@ -65,9 +65,38 @@ input, textarea, button, select, pre, tt, code, kbd, samp {line-height: inherit;
 .mt-30{margin-top:30px;}
 .pad-10{padding:10px;}
 .pl-15{padding-left:15px;}
+.pt-10{padding-top:10px;}
 .pad-tb-10{padding:10px 0;}
 .pad-lr-10{padding:0 10px;}
-
+html { font-family: "Helvetica Neue", Helvetica, STHeiTi, Arial, sans-serif; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; font-size:14px; -ms-touch-action: none;-webkit-overflow-scrolling:touch;}
+body { margin: 0; font-size:14px; line-height: 1; color: #212121; background-color:#f5f5f5; overflow: hidden;   }
+@media screen and (min-width: 375px) {
+    html {
+        /* iPhone6的375px尺寸作为16px基准，414px正好18px大小, 600 20px */
+        font-size: calc(100% + 2 * (100vw - 375px) / 39);
+        font-size: calc(16px + 2 * (100vw - 375px) / 39);
+    }
+}
+@media screen and (min-width: 414px) {
+    html {
+        /* 414px-1000px每100像素宽字体增加1px(18px-22px) */       
+        font-size: calc(112.5% + 4 * (100vw - 414px) / 586);
+        font-size: calc(18px + 4 * (100vw - 414px) / 586);
+    }
+}
+@media screen and (min-width: 600px) {
+    html {
+        /* 600px-1000px每100像素宽字体增加1px(20px-24px) */
+        font-size: calc(125% + 4 * (100vw - 600px) / 400);
+        font-size: calc(20px + 4 * (100vw - 600px) / 400);
+    }
+}
+@media screen and (min-width: 800px) {
+    html {
+        /* 800px往后是16px */
+        font-size: 16px;
+    }
+}
 
 
 
