--- a/src/assets/css/acc/traderpw/traderpw.css
+++ b/src/assets/css/acc/traderpw/traderpw.css
@@ -1,59 +1,47 @@
 @charset "UTF-8";
 /*交易密码*/
 .acc-traderpw .no-btborder{border-bottom:none;}
-.acc-traderpw .mark{display:inline-block;width:70px;}
-.acc-traderpw .tips{padding:10px;}
-.acc-traderpw .tips h2{font-size:13px;}
-.acc-traderpw .tips h2 i{ font-size:20px;color: #ffa507;}
-.acc-traderpw .tips p{font-size:12px;line-height:150%;color:#999;margin-top:5px;}
+.acc-traderpw .mark{display:inline-block;width:5rem;}
+.acc-traderpw .tips{padding:0.7143rem;}
+.acc-traderpw .tips h2{font-size:0.9286rem;}
+.acc-traderpw .tips h2 i{ font-size:1.4286rem;color: #ffa507;}
+.acc-traderpw .tips p{font-size:0.8571rem;line-height:150%;color:#999;margin-top:0.3571rem;}
 
 /*修改交易密码*/
 .acc-traderpw-modify .no-btborder{border-bottom:none;}
-.acc-traderpw-modify .mark{display:inline-block;width:70px;}
-.forgotPassword {float: right;color: #00aaee;font-size: 12px;padding-right: 10px; }
+.acc-traderpw-modify .mark{display:inline-block;width:5rem;}
+.forgotPassword {float: right;color: #00aaee;font-size: 0.8571rem;padding-right: 0.7143rem; }
 
 /*设置交易密码成功*/
-.mt-50{margin-top:50px;;}
-.mt-100{margin-top:100px;}
-.acc-traderpw-success{width:100%;padding:0 20px;text-align:center;}
-.acc-traderpw-success .ic-success {color: #23c768;font-size:50px;}
-.acc-traderpw-success .ic-closed{color: #de3939;font-size:50px;}
+.mt-50{margin-top:3.5714rem;;}
+.mt-100{margin-top:7.1429rem;}
+.acc-traderpw-success{width:100%;padding:0 1.4286rem;text-align:center;}
+.acc-traderpw-success .ic-success {color: #23c768;font-size:3.5714rem;}
+.acc-traderpw-success .ic-closed{color: #de3939;font-size:3.5714rem;}
 .ic-success:after {content: '\e646';}
-.acc-traderpw-success .text{font-size:14px;color:#999;}
+.acc-traderpw-success .text{font-size:1rem;color:#999;}
 
 
 /*2016-11-23 新增港澳台地区*/
 .pop-areabox{position: fixed;bottom:0;left:0;width:100%;background-color:#fff;-webkit-transform:translateY(100%);transform:translateY(100%);z-index:6;}
-@media screen and (min-width:800px) {
-    .pop-areabox{width:540px;left:50%;margin-left:-270px;}
+@media screen and (min-width:57.1429rem) {
+    .pop-areabox{width:38.5714rem;left:50%;margin-left:-19.2857rem;}
 }
 .pop-areabox.active{-webkit-transform:translateY(0);transform:translateY(0);}
-.pop-areabox ul{padding:10px 0 20px;}
-.pop-areabox ul li{ height:50px;line-height:50px;padding:0 10px;font-size:14px;color:#424242;}
+.pop-areabox ul{padding:0.7143rem 0 1.4286rem;}
+.pop-areabox ul li{ height:3.5714rem;line-height:3.5714rem;padding:0 0.7143rem;font-size:1rem;color:#424242;}
 
 /*2018-3-1 手机验证码校验*/
-.acc-traderpw-tell{ padding:15px 10px;background-color:#fff;}
-.acc-traderpw-tell .pub-list,.acc-traderpw-tell .input-item{ padding:0;border-bottom:none;min-height:26px;}
-.acc-traderpw-tell .pub-list .tellIcon{display: inline-block;width: 18px;height: 30px;background: url(http://help.soqi.cn/forgetPsw.png) center no-repeat;background-size: 100% auto;background-position: 0px -17px;}
-.acc-traderpw-tell .pub-list .flex{ font-size:15px;color:#525252; }
+.acc-traderpw-tell{ padding:1.0714rem 0.7143rem;background-color:#fff;}
+.acc-traderpw-tell .pub-list,.acc-traderpw-tell .input-item{ padding:0;border-bottom:none;min-height:1.8571rem;}
+.acc-traderpw-tell .pub-list .tellIcon{display: inline-block;width: 1.2857rem;height: 2.1429rem;background: url(http://help.soqi.cn/forgetPsw.png) center no-repeat;background-size: 100% auto;background-position: 0rem -1.2143rem;}
+.acc-traderpw-tell .pub-list .flex{ font-size:1.0714rem;color:#525252; }
 .acc-traderpw-tell .pub-list .flex em{ color:#1f8ff3;}
-.acc-traderpw-tell .input-item .pub-btn{ height:30px;line-height:28px;}
-.acc-traderpw-tell-tips{ display:none;margin-top:15px;height:30px;line-height:30px;text-align:center;background-color:#fff9df;font-size:15px;color:#999;}
+.acc-traderpw-tell .input-item .pub-btn{ height:2.1429rem;line-height:2rem;font-size: 0.8571rem;min-width: 5.7143rem;padding:0;}
+.acc-traderpw-tell-tips{ display:none;margin-top:1.0714rem;line-height:2.1429rem;text-align:center;background-color:#fff9df;font-size:1.0714rem;color:#999;}
 .acc-traderpw-tell-tips em{ color:#1f8ff3;}
 
 /* 找回密码按钮 */
-.acc-retrieve-password{
-    text-align: right;
-    color: #1f8ff3;
-}
-/* 地区选择*/
-/* .acc-traderpw-area{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 5;
-    background: rgba(0,0,0,.5);
-    display: none;
-} */
+.acc-retrieve-password{text-align: right;color: #1f8ff3;}
+/* 验证码 */
+.acc-traderpw-tell .check-code-box .mark{display:inline-block;margin:0;}
