--- a/src/assets/css/common/common.css
+++ b/src/assets/css/common/common.css
@@ -7,49 +7,49 @@
 
 /*页面布局*/
 .viewbox{display: -webkit-box;display: -webkit-flex;display: flex;height:100%; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column;flex-direction: column; overflow: hidden;position:relative}
-@media screen and (min-width:800px) {
-    .viewbox{ width: 540px;margin:0 auto;}
-    .header{width: 540px;margin:0 auto;}
+@media screen and (min-width:57.1429rem) {
+    .viewbox{ width: 38.5714rem;margin:0 auto;}
+    .header{width: 38.5714rem;margin:0 auto;}
 }
 .header{position:relative;z-index:4;}
-.topbar{ height:44px;position: relative;z-index:4; background-color:#f8f8f8;color:#5f5f5f;overflow: hidden; white-space: nowrap;text-overflow: ellipsis;text-align: center; box-shadow: 0 1px 2px #cfcfcf;}
-.topbar-fl,.topbar-fr{position:absolute;top:0;height:44px;line-height:44px;color:#5f5f5f;font-size:14px;}
-.topbar-fl{left:0;padding-left:10px;text-align:left;}
-.topbar-fr{right:0;padding-right:10px;text-align:right;}
-.topbar >.title{overflow: hidden;white-space: nowrap; text-overflow: ellipsis;margin: 0 60px;font-size:18px;line-height:44px;font-weight:bold;}
-.topmenu{padding: 15px 10px;background: rgba(255,255,255,0.95);position: absolute;left: 0;top: 0;z-index:3;width: 100%; box-shadow: 0 1px 2px #cfcfcf;transition: transform 0.2s ease-in; -webkit-transition: -webkit-transform 0.2s ease-in; transform: translateY(-145px);-webkit-transform: translateY(-145px);}
-@media screen and (min-width:800px) {
-    .topmenu{ width: 540px;left:50%;margin-left:-270px;}
+.topbar{ height:3.1429rem;position: relative;z-index:4; background-color:#f8f8f8;color:#5f5f5f;overflow: hidden; white-space: nowrap;text-overflow: ellipsis;text-align: center; box-shadow: 0 0.0714rem 0.1429rem #cfcfcf;}
+.topbar-fl,.topbar-fr{position:absolute;top:0;height:3.1429rem;line-height:3.1429rem;color:#5f5f5f;font-size:1rem;}
+.topbar-fl{left:0;padding-left:0.7143rem;text-align:left;}
+.topbar-fr{right:0;padding-right:0.7143rem;text-align:right;}
+.topbar >.title{overflow: hidden;white-space: nowrap; text-overflow: ellipsis;margin: 0 4.2857rem;font-size:1.2857rem;line-height:3.1429rem;font-weight:bold;}
+.topmenu{padding: 1.0714rem 0.7143rem;background: rgba(255,255,255,0.95);position: absolute;left: 0;top: 0;z-index:3;width: 100%; box-shadow: 0 0.0714rem 0.1429rem #cfcfcf;transition: transform 0.2s ease-in; -webkit-transition: -webkit-transform 0.2s ease-in; transform: translateY(-10.3571rem);-webkit-transform: translateY(-10.3571rem);}
+@media screen and (min-width:57.1429rem) {
+    .topmenu{ width: 38.5714rem;left:50%;margin-left:-19.2857rem;}
 }
-.topmenu.active {transform: translateY(44px);-webkit-transform: translateY(44px);}
+.topmenu.active {transform: translateY(3.1429rem);-webkit-transform: translateY(3.1429rem);}
 .topmenu ul{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
 .topmenu ul li{-webkit-box-flex: 1; -ms-flex: 1; -webkit-flex: 1;flex: 1;display:block;text-align:center;}
 .topmenu ul li a{display:block;}
-.topmenu ul li span{display: inline-block;text-align: center;line-height:44px;width:44px;height:44px;border: solid 1px #e5e5e5;border-radius: 4px;position: relative;}
-.topmenu ul li span .pub-buttle{position:absolute;right:-6px;top:-5px;}
-.topmenu ul li span i:after{font-size:30px;color:#a1a1a1;}
-.topmenu ul li p{font-size:13px;color:#5f5f5f;margin-top:10px;}
+.topmenu ul li span{display: inline-block;text-align: center;line-height:3.1429rem;width:3.1429rem;height:3.1429rem;border: solid 0.0714rem #e5e5e5;border-radius: 0.2857rem;position: relative;}
+.topmenu ul li span .pub-buttle{position:absolute;right:-0.4286rem;top:-0.3571rem;}
+.topmenu ul li span i:after{font-size:2.1429rem;color:#a1a1a1;}
+.topmenu ul li p{font-size:0.9286rem;color:#5f5f5f;margin-top:0.7143rem;}
 .wrapbox{-webkit-box-flex: 1;-webkit-flex: 1;  flex: 1;  position: relative;overflow-y:auto;overflow-x:hidden;z-index:1}
-.sub-item-hd{height:30px;line-height:30px;padding:0 10px;font-size:12px;color:#8f8f8f;}/*页面副标题*/
+.sub-item-hd{height:2.1429rem;line-height:2.1429rem;padding:0 0.7143rem;font-size:0.8571rem;color:#8f8f8f;}/*页面副标题*/
 p{line-height:150%;}
 /*企业以及VIP标示*/
-i.ic-level,i.ic-org,.ic-temporary,.ic-org-manage,.ic-supermember{display: inline-block;width: 20px; height: 20px;overflow: hidden;text-align: center;color: #ffcf54; -webkit-border-radius: 100%;border-radius: 100%;border: solid 2px rgba(255,255,255,0.8); vertical-align: top; position: absolute;bottom: -2px;right: -5px;z-index:2;}
-i.ic-temporary{background-color: #eb3a0c;color:#fff;font-size:12px;line-height:18px;border-radius:50%;}
+i.ic-level,i.ic-org,.ic-temporary,.ic-org-manage,.ic-supermember{display: inline-block;width: 1.4286rem; height: 1.4286rem;overflow: hidden;text-align: center;color: #ffcf54; -webkit-border-radius: 100%;border-radius: 100%;border: solid 0.1429rem rgba(255,255,255,0.8); vertical-align: top; position: absolute;bottom: -0.1429rem;right: -0.3571rem;z-index:2;}
+i.ic-temporary{background-color: #eb3a0c;color:#fff;font-size:0.8571rem;line-height:1.2857rem;border-radius:50%;}
 .ic-level:after{background-color: #eb3a0c;}
-i.ic-org{border: solid 2px #fff;color: #fff;}
+i.ic-org{border: solid 0.1429rem #fff;color: #fff;}
 i.ic-org{background-color: #0079ff;}
-.ic-supermember{ background-color: #352b34; font-size: 14px; line-height: 17px;}
-.ic-org-vip{position: absolute;bottom: -1px;right: -18px;z-index:1;font-size:12px;display:inline-block;width: 20px;height: 11px;line-height: 13px;border-radius:7px;padding-right: 1px;background-color:#fcc10f;color:#fff;text-align:right;}
-.ic-org-manage{line-height:18px;font-size:12px;}
+.ic-supermember{ background-color: #352b34; font-size: 1rem; line-height: 1.2143rem;}
+.ic-org-vip{position: absolute;bottom: -0.0714rem;right: -1.2857rem;z-index:1;font-size:0.8571rem;display:inline-block;width: 1.4286rem;height: 0.7857rem;line-height: 0.9286rem;border-radius:0.5rem;padding-right: 0.0714rem;background-color:#fcc10f;color:#fff;text-align:right;}
+.ic-org-manage{line-height:1.2857rem;font-size:0.8571rem;}
 
 /*输入框*/
-.input-item{display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 14px;color:#4f4f4f; padding:10px; background-color: #fff;border-bottom: 1px solid #e5e5e5;min-height:46px;}
+.input-item{display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 1rem;color:#4f4f4f; padding:0.7143rem; background-color: #fff;border-bottom: 0.0714rem solid #e5e5e5;min-height:3.2857rem;}
 .input-item.noborder{border-bottom:none;}
-.input-item .mark:not(:last-child) {margin-right:10px;}
-.input-item > .pub-input{ height:auto;min-height:26px;line-height:26px; padding: 0;border: 0;  }
-.input-item .eyes i:after{font-size:20px;color:#444;}
+.input-item .mark:not(:last-child) {margin-right:0.7143rem;}
+.input-item > .pub-input{ height:auto;min-height:1.8571rem;line-height:1.8571rem; padding: 0;border: 0;  }
+.input-item .eyes i:after{font-size:1.4286rem;color:#444;}
 .input-item i{color:#7f7f7f;}
-.input-item>i{display:inline-block;width:26px;height:26px;text-align:right;line-height:26px;}
+.input-item>i{display:inline-block;width:1.8571rem;height:1.8571rem;text-align:right;line-height:1.8571rem;}
 
 /*按钮*/
 /*============================================================
@@ -57,34 +57,34 @@ i.ic-org{background-color: #0079ff;}
     pub-btn-stacked：通栏样式
     pub-btn-light/pub-btn-disable：扩展按钮颜色，默认是蓝色
 ============================================================ */
-.pub-btn{display:inline-block;padding:0 12px;vertical-align:top;border-radius:5px;border:0 none;background-color: #1f8ff3;color:#fff;text-align:center;cursor:pointer;position:relative;letter-spacing:2px;}
+.pub-btn{display:inline-block;padding:0 0.8571rem;vertical-align:top;border-radius:0.3571rem;border:0 none;background-color: #1f8ff3;color:#fff;text-align:center;cursor:pointer;position:relative;letter-spacing:0.1429rem;}
 .pub-btn-angle{border-radius:0;}
-.pub-btn-s{height:28px;line-height:28px;font-size:14px;min-width:70px;border-radius:3px;}
-.pub-btn-m{height:40px;line-height:40px;font-size:14px;}
-.pub-btn-l{height:44px;line-height:44px;font-size:16px;}
+.pub-btn-s{height:2rem;line-height:2rem;font-size:1rem;min-width:5rem;border-radius:0.2143rem;}
+.pub-btn-m{height:2.8571rem;line-height:2.8571rem;font-size:1rem;}
+.pub-btn-l{height:3.1429rem;line-height:3.1429rem;font-size:1.1429rem;}
 .pub-btn-stacked{display:block;width:100%;}
 .pub-btn-light{background-color:#fff;color: #1f8ff3;}
-.pub-btn-light::after{position:absolute;width:100%;height:100%;top:0;left:0;content: "\0020";border-radius:3px;border:1px solid #1f8ff3;}
+.pub-btn-light::after{position:absolute;width:100%;height:100%;top:0;left:0;content: "\0020";border-radius:0.2143rem;border:0.0714rem solid #1f8ff3;}
 .pub-btn-disable{background-color:#e5e5e5;color:#999;}
 .pub-btn-red{background-color: #e34d4f;}
-.pub-btn i{margin-right:5px;}
+.pub-btn i{margin-right:0.3571rem;}
 
 /*下拉框*/
 .pub-select{position:relative;}
-.pub-select > select{-webkit-appearance: none;appearance: none;outline: none;width:100%;height:32px;line-height:1;border:1px solid #ccc;font-size:14px;color:#7f7f7f;position: relative;z-index:2;background-color: transparent;padding-left:5px;}
-.pub-select  .ic-down{position:absolute;top:4px;right:5px;z-index:1;}
+.pub-select > select{-webkit-appearance: none;appearance: none;outline: none;width:100%;height:2.2857rem;line-height:1;border:0.0714rem solid #ccc;font-size:1rem;color:#7f7f7f;position: relative;z-index:2;background-color: transparent;padding-left:0.3571rem;}
+.pub-select  .ic-down{position:absolute;top:0.2857rem;right:0.3571rem;z-index:1;}
 .pub-select  .ic-down:after{content:'\e610';color:#7f7f7f;}
 
 /*公用列表布局*/
-.pub-list{display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 14px;color: #212121; padding:5px 10px; background-color: #fff;border-bottom: 1px solid #e5e5e5;min-height:44px;}
-.pub-list.pad-10{padding:10px;}
+.pub-list{display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 1rem;color: #212121; padding:0.3571rem 0.7143rem; background-color: #fff;border-bottom: 0.0714rem solid #e5e5e5;min-height:3.1429rem;}
+.pub-list.pad-10{padding:0.7143rem;}
 .pub-list-top{ -webkit-box-align:start; -webkit-align-items:flex-start; align-items: flex-start; }
 .pub-list.noborder{border-bottom:none;}
-.pub-list .mark:not(:last-child) {margin-right:10px;}
-.pub-list .name{font-size:14px;color:#424242;}
-.pub-list .info{font-size:14px;color:#999;margin-top:5px;}
-.pub-list .faceImg{width:40px;height:40px;background-color:#eee;-webkit-border-radius:50%;border-radius: 50%;position: relative;border:1px solid #e5e5e5;}
-.pub-list .faceImg:not(:last-child) {margin-right:10px;}
+.pub-list .mark:not(:last-child) {margin-right:0.7143rem;}
+.pub-list .name{font-size:1rem;color:#424242;}
+.pub-list .info{font-size:1rem;color:#999;margin-top:0.3571rem;}
+.pub-list .faceImg{width:2.8571rem;height:2.8571rem;background-color:#eee;-webkit-border-radius:50%;border-radius: 50%;position: relative;border:0.0714rem solid #e5e5e5;}
+.pub-list .faceImg:not(:last-child) {margin-right:0.7143rem;}
 .pub-list .faceImg img{width:100%;height:100%;border-radius: 50%;}
 
 /*==============弹出窗==========*/
@@ -92,50 +92,50 @@ i.ic-org{background-color: #0079ff;}
 .pop-coverbg{position:fixed; top: 0; left: 0;right: 0; bottom: 0;z-index:5;background: rgba(0,0,0,.5);display:none;} /*全屏遮罩层*/
 .pop-coverbg.active{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;}
 /*取消/确认弹出*/
-.pop-comfirmDelete{width:85%;background-color:#fff;border-radius:10px;position:relative}
-@media screen and (min-width:800px) {
-    .pop-coverbg{width:540px;left:50%;margin-left:-270px;}
-    .pop-comfirmDelete{width:400px;}
+.pop-comfirmDelete{width:85%;background-color:#fff;border-radius:0.7143rem;position:relative}
+@media screen and (min-width:57.1429rem) {
+    .pop-coverbg{width:38.5714rem;left:50%;margin-left:-19.2857rem;}
+    .pop-comfirmDelete{width:28.5714rem;}
 }
-.pop-comfirmDelete .ic-close{position:absolute;top:5px;right:5px;color:#999;font-size:24px;z-index: 9;}
-.pop-comfirmDelete .head{padding: 25px  10px 0 10px;font-size:16px;;color:#030303;text-align: center;}
-.pop-comfirmDelete .cnt{padding:20px 10px; text-align:center; font-size:14px;color:#666;line-height: 180%;}
-.pop-comfirmDelete .flexbox{height:40px;line-height:40px;border-top:1px solid #e5e5e5;}
-.pop-comfirmDelete .flexbox .flex{font-size:16px;;color:#030303;text-align:center;width:50%;}
-.pop-comfirmDelete .flexbox .flex:first-child{border-right:1px solid #e5e5e5;}
+.pop-comfirmDelete .ic-close{position:absolute;top:0.3571rem;right:0.3571rem;color:#999;font-size:1.7143rem;z-index: 9;}
+.pop-comfirmDelete .head{padding: 1.7857rem  0.7143rem 0 0.7143rem;font-size:1.1429rem;;color:#030303;text-align: center;}
+.pop-comfirmDelete .cnt{padding:1.4286rem 0.7143rem; text-align:center; font-size:1rem;color:#666;line-height: 180%;}
+.pop-comfirmDelete .flexbox{height:2.8571rem;line-height:2.8571rem;border-top:0.0714rem solid #e5e5e5;}
+.pop-comfirmDelete .flexbox .flex{font-size:1.1429rem;;color:#030303;text-align:center;width:50%;}
+.pop-comfirmDelete .flexbox .flex:first-child{border-right:0.0714rem solid #e5e5e5;}
 .pop-comfirmDelete .flexbox .flex.comform{color:#2999ff}
 
 /*输入框输入取消 确认弹出*/
-.pop-comfirmDelete .inputCnt{padding:20px 10px;}
-.pop-comfirmDelete .inputCnt input{display: block; height: 32px; line-height: 32px;background: #f2f2f2; border: none; width: 100%; font-size: 14px;text-indent: 15px;}
-.pop-comfirmDelete .inputCnt p{font-size: 12px;color: #999;text-align: right;line-height:120%;margin-top:5px;}
+.pop-comfirmDelete .inputCnt{padding:1.4286rem 0.7143rem;}
+.pop-comfirmDelete .inputCnt input{display: block; height: 2.2857rem; line-height: 2.2857rem;background: #f2f2f2; border: none; width: 100%; font-size: 1rem;text-indent: 1.0714rem;}
+.pop-comfirmDelete .inputCnt p{font-size: 0.8571rem;color: #999;text-align: right;line-height:120%;margin-top:0.3571rem;}
 
 /*普通弹出 3秒提示*/
-.noticeTis-toast{position: absolute; z-index:7;-webkit-animation: fadeInOut 3s linear forwards;text-align: center;top: 70%;  width: 100%; left: 0; display: block; font-size: 16px;; line-height: 1.2}
-.noticeTis-cont{background: rgba(0,0,0,0.8); border: solid 1px #000;-webkit-animation: fadeInOut 3s linear forwards; border-radius: 4px; color: #fff; display: inline-block; padding: 10px 20px; -webkit-box-shadow:0 0 12px rgba(0,0,0,.3); box-shadow:0 0 12px rgba(0,0,0,.3); text-align: left; max-width: 90%;}
+.noticeTis-toast{position: absolute; z-index:7;-webkit-animation: fadeInOut 3s linear forwards;text-align: center;top: 70%;  width: 100%; left: 0; display: block; font-size: 1.1429rem;; line-height: 1.2}
+.noticeTis-cont{background: rgba(0,0,0,0.8); border: solid 0.0714rem #000;-webkit-animation: fadeInOut 3s linear forwards; border-radius: 0.2857rem; color: #fff; display: inline-block; padding: 0.7143rem 1.4286rem; -webkit-box-shadow:0 0 0.8571rem rgba(0,0,0,.3); box-shadow:0 0 0.8571rem rgba(0,0,0,.3); text-align: left; max-width: 90%;}
 @-webkit-keyframes fadeInOut {
     0% { opacity: 0;}
     10% { opacity: 1;}
-    90% { opacity: 1; -webkit-transform: translateY(0px);}
-    99% { opacity: 0; -webkit-transform: translateY(-30px);}
+    90% { opacity: 1; -webkit-transform: translateY(0rem);}
+    99% { opacity: 0; -webkit-transform: translateY(-2.1429rem);}
     100% { opacity: 0; }
 }
 
 /*loading*/
-.loading{margin:0 auto;width:96px;height:65px;background:url(http://7xiobb.com2.z0.glb.clouddn.com/loading.png) center no-repeat;border:none;background-size:100% auto; -webkit-animation: dash 3.7s steps(37) infinite;}
+.loading{margin:0 auto;width:6.8571rem;height:4.6429rem;background:url(http://7xiobb.com2.z0.glb.clouddn.com/loading.png) center no-repeat;border:none;background-size:100% auto; -webkit-animation: dash 3.7s steps(37) infinite;}
 @-webkit-keyframes dash {
     0%{background-position:0 0;}
-    100%{background-position: 0 -2405px;}
+    100%{background-position: 0 -171.7857rem;}
 }
 /*弹出小的加载层*/
-.poploadingbox{min-width:100px;padding:10px;border-radius:5px;background-color:#fff;}
-.poploadingbox .inner{padding:15px 0;}
-.poploadingbox .text{font-size: 14px; color: #2999ff;text-align: center;line-height: 130%;}
-.poploading{margin:0 auto;width:48px;height:32px;background:url(http://7xiobb.com2.z0.glb.clouddn.com/poploading.png) center no-repeat;border:none;background-size:100% auto; -webkit-animation: popdash 3.7s steps(37) infinite;}
+.poploadingbox{min-width:7.1429rem;padding:0.7143rem;border-radius:0.3571rem;background-color:#fff;}
+.poploadingbox .inner{padding:1.0714rem 0;}
+.poploadingbox .text{font-size: 1rem; color: #2999ff;text-align: center;line-height: 130%;}
+.poploading{margin:0 auto;width:3.4286rem;height:2.2857rem;background:url(http://7xiobb.com2.z0.glb.clouddn.com/poploading.png) center no-repeat;border:none;background-size:100% auto; -webkit-animation: popdash 3.7s steps(37) infinite;}
 .ani{-webkit-animation-duration:500ms;animation-duration:500ms;-webkit-animation-fill-mode:both;animation-fill-mode:both}
 @-webkit-keyframes popdash {
     0%{background-position:0 0;}
-    100%{background-position: 0 -1184px;}
+    100%{background-position: 0 -84.5714rem;}
 }
 @-webkit-keyframes fade-in-up{
     0%{opacity:0;-webkit-transform:translate3d(0,100%,0)}
@@ -148,10 +148,10 @@ i.ic-org{background-color: #0079ff;}
 .ani.fade-in-up{-webkit-animation-name:fade-in-up;animation-name:fade-in-up}
 
 /*下拉加载更多*/
-.dropload-up,.dropload-down{position: relative;height: 0;overflow: hidden; font-size:12px;/* 开启硬件加速 */ -webkit-transform:translateZ(0); transform:translateZ(0);}
-.dropload-down{height: 50px;}
-.dropload-refresh,.dropload-update,.dropload-load,.dropload-noData{height: 50px;line-height: 50px;text-align: center;}
-.dropload-load .loadIco{ display: inline-block; height: 15px; width: 15px;border-radius: 100%; margin: 6px; border: 2px solid #666; border-bottom-color: transparent;vertical-align: middle; -webkit-animation: rotate 0.75s linear infinite; animation: rotate 0.75s linear infinite;}
+.dropload-up,.dropload-down{position: relative;height: 0;overflow: hidden; font-size:0.8571rem;/* 开启硬件加速 */ -webkit-transform:translateZ(0); transform:translateZ(0);}
+.dropload-down{height: 3.5714rem;}
+.dropload-refresh,.dropload-update,.dropload-load,.dropload-noData{height: 3.5714rem;line-height: 3.5714rem;text-align: center;}
+.dropload-load .loadIco{ display: inline-block; height: 1.0714rem; width: 1.0714rem;border-radius: 100%; margin: 0.4286rem; border: 0.1429rem solid #666; border-bottom-color: transparent;vertical-align: middle; -webkit-animation: rotate 0.75s linear infinite; animation: rotate 0.75s linear infinite;}
 @-webkit-keyframes rotate {
     0% {
         -webkit-transform: rotate(0deg);
