--- a/src/assets/css/common/common.css
+++ b/src/assets/css/common/common.css
@@ -26,6 +26,27 @@
 .topmenu ul li{-webkit-box-flex: 1; -ms-flex: 1; -webkit-flex: 1;flex: 1;display:block;text-align:center;}
 .topmenu ul li a{display:block;}
 .topmenu ul li span{display: inline-block;text-align: center;line-height:3.1429rem;width:3.1429rem;height:3.1429rem;border: solid 0.0714rem #e5e5e5;border-radius: 0.2857rem;position: relative;}
+.topmenu ul li span .pub-buttle{
+    display: -webkit-inline-flex;
+    display: inline-flex;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    word-wrap: break-word;
+    word-break: break-all;
+    min-width: 1.1429rem;
+    min-height: 1.1429rem;
+    padding: 0 0.2143rem;
+    position: relative;
+    border-radius: 0.7143rem;
+    background-color: #f46200;
+    color: #fff;
+    font-size: 0.5rem;
+    line-height: 1;
+}
 .topmenu ul li span .pub-buttle{position:absolute;right:-0.4286rem;top:-0.3571rem;}
 .topmenu ul li span i:after{font-size:2.1429rem;color:#a1a1a1;}
 .topmenu ul li p{font-size:0.9286rem;color:#5f5f5f;margin-top:0.7143rem;}
